# Brayns-UC-SDF

./: CMakeLists.txt  README.md
core/module/ispc/renderer/: Glsl.ispc  Sdf.ih  Sdf.ispc  SdfRenderer.cpp  SdfRenderer.h  SdfRenderer.ih  SdfRenderer.ispc
core/plugin/: SdfPlugin.cpp  SdfPlugin.h
core/plugin/api/: Params.cpp  Params.h
core/plugin/common/: Logs.h  Types.h
